--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		%sveltekit.body%
 
 		<script src="/node_modules/preline/dist/preline.js"></script>
 	</body>
