--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,7 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 
-		<script src="assets/preline/dist/preline.js"></script>
+		<!-- <script src="assets/preline/dist/preline.js"></script> -->
+		<script src="/node_modules/preline/dist/preline.js"></script>
 	</body>
 </html>
